Still trying to fix loading image issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ html {
 
 body {
     background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("vectorbg.jpg");
+    background-size: auto;
     background-repeat: no-repeat;
-    background-position: center center;
     background-attachment: fixed;
     color: white;
     font-size: 1em;
